--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "react-router-dom": "^7.6.3"
-  },
-  "devDependencies": {}
+  }
 }
