--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.7",
     "jsonwebtoken": "^9.0.2",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3"
