preparing for deployement

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3"
