--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^1.11.0",
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
