--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.7.1"
   }
 }
